--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ def taskName = getGradle().getStartParameter().getTaskRequests().toString().toLo
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-         if (taskName.contains("google")){
+         if (taskName.contains("google")||taskName.contains("ios")){
             classpath 'com.google.gms:google-services:4.3.10'
         }
         if (taskName.contains("huawei")){
