--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,7 +38,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 29
     ndkVersion flutter.ndkVersion
 
     flavorDimensions "store-type"
