--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,8 @@ buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
-        mavenCentral()
+        //mavenCentral()
+        maven { url 'http://repo1.maven.org/maven2' }
         maven { url 'https://developer.huawei.com/repo/' }
     }
 def taskName = getGradle().getStartParameter().getTaskRequests().toString().toLowerCase()
