gradle, se cambio el mavenCentral() a maven url

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
         google()
         //mavenCentral()
-        maven { url 'http://repo1.maven.org/maven2' }
+        maven { url 'https://repo1.maven.org/maven2' }
         maven { url 'https://developer.huawei.com/repo/' }
     }
 def taskName = getGradle().getStartParameter().getTaskRequests().toString().toLowerCase()
