--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,8 @@ def taskName = getGradle().getStartParameter().getTaskRequests().toString().toLo
 allprojects {
     repositories {
         google()
-        mavenCentral()
+        //mavenCentral()
+        maven { url 'https://repo1.maven.org/maven2' }
         maven { url 'https://developer.huawei.com/repo/' }
     }
 }
