--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,9 +28,9 @@ allprojects {
 }
 
 rootProject.buildDir = '../build'
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
+// subprojects {
+//     project.buildDir = "${rootProject.buildDir}/${project.name}"
+// }
 subprojects {
     project.evaluationDependsOn(':app')
 }
